@@ -83,6 +83,16 @@ The optional "here" parameter should follow the name if the \
 command is to be issued with the player in the same room as the \
 archon.
 
+ASYNC=\
+Command : ASYNC\n\r\
+Usage   : ASYNC [COMMAND]\n\r\
+Example : async where mob the\n\r\
+Short(s): \n\r\
+A command that allows one to issue other commands on their own \
+separate thread, so that you can continue to issue other commands \
+while the other one is ongoing and giving you its output.  Be careful \
+not to lock up all of your muds threads this way!
+
 AT=\
 Command : AT\n\r\
 Usage   : AT [ROOM ID/DESC/MOB/AREA] [COMMAND]\n\r\
