@@ -45,6 +45,7 @@
  43. Quest Maker Wizard now supports reward items, and will reselect quest givers 
  44. New property: Prop_RoomRedirect, and the MODIFY command now supports modify room <roomid> syntax. 
  45. New Scriptable functions: ITEMCOUNT, CANHEAR, CANSEE
+ 46. New Archon command: ASYNC, for running long commands in the background.
  
 # Build 5.9.8 Release 4/8/2019
   1. New skills: Informant, AutoSwipe, Find Clan Home, Find Clan Ship, Letter of Marque
